# wb_data_vis

./: README.md  REPORT.md  brainstorming.md  index.html  notas_pilar3_presentacion.md  pyproject.toml
data/raw/civil society/: access_to_civil_justice.parquet  bertelsmann_transformation_index:_civil_society_traditions.parquet  civic_space_index.parquet  civil_and_political_inclusion_score.parquet  civil_liberties_index.parquet  civil_society_participation_index.parquet  core_civil_society_index.parquet  criminal_penalties_or_civil_remedies_exist_for_sexual_harassment_in_employment.parquet  democracy_index:_civil_liberties_score.parquet  eqosogi:_civil_and_political_inclusion_score.parquet  freedom_civil_liberties_score_score.parquet  freedom_in_civil_liberties_scores.parquet  in_civil_work_is_not_compromised_by_political.parquet  nations_in_transit:_civil_society.parquet  political_civil_liberties_index.parquet  private_civil_liberties_index.parquet  sustainable_governance_civil_rights.parquet  women_civil_liberties_index.parquet  women_civil_society_participation_index.parquet
html/: cartogram.html  cartogram_data.json  pilar3_digital_development.html  three_pillars_parallel.html
html/other/: bar_chart_race.html  pilar3_digital_development_original.html  pilar_institucional.html  race_data.js
notebooks/: TPFINAL_PEDRO.ipynb  altair_dashboard.ipynb  data_exploration.ipynb  data_extraction.ipynb  pilar3_digital_development.ipynb  trade.duckdb  trade_bilateral.parquet
viz/: connection_map.html  data.json  network_graph.html  prepare_data.py
(+271 files in other folders)
